--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,9 @@
     "es5-shim": "~2.1.0",
     "jquery": "~1.10.2",
     "sass-bootstrap": "~3.0.2",
-    "angular-resource": "1.2.6"
+    "angular-resource": "1.2.6",
+    "angular-sanitize": "1.2.6",
+    "angular-bootstrap": ""
   },
   "devDependencies": {
     "angular-mocks": "1.2.6",
